spruceinfotech DevOps Software Engineer | SmartRecruiters. Contract DevOps Engineer | Shulman Fleming &amp; Partners.     DevOps Engineer (Software Development) at Artificial Solutions . Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters. Drivy - Tooling / DevOps Intern. Job Application for DevOps Engineer at Stack Sports  . Dell International Services DevOps Engineer | SmartRecruiters. DevOps Engineer | Averity. DevOps Engineer at FinTech disruptor | Averity. Job Application for DevOps Engineer at SumUp. New York Media - DevOps Engineer. Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg. Burwood Group Careers - DevOps Architect. Libertex Group - Jobs: DevOps / Incident Manager (relocation to Montenegro) - Apply online. Job Application for DevOps Engineer- Database Infrastructure at Wayfair. DevOps Engineer - First West Credit Union Careers.     0723 - Sr DevOps Engineer at Workforce Source .     0722 - Sr DevOps Engineer at Workforce Source . Adevinta Devops F-H Recommandation | SmartRecruiters. Job Application for DevOps Security Engineer  at Curology. Job Application for Sr. DevOps Security Engineer  at Curology. Operations Engineer (DevOps) - Gengo - Career Page.       DevOps Engineer - DefinedCrowd     . Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA. Guidewire Software, Inc. Careers - DevOps Engineer- Microservices Platform- Birmingham, AL. Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN. Job @ Durststrecke (Köln): DevOps / Backend Entwic... | JOIN. Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN. Job @ talpasolutions (Essen): DevOps Programmierer... | JOIN. Job Application for SRE / DevOps at Resultados Digitais. Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais. Capita - DevOps Engineer - UK - England - London UK - England .... Job Application for DevOps Support Engineer - US Remote at Humio. Job Application for Systems Engineer (SRE/DevOps) at Nuban

--- a/devops.html
+++ b/devops.html
@@ -39,10 +39,10 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692278833-devops-software-engineer'>spruceinfotech DevOps Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/buf156kyqzw8jamfoyoakb17xh'>Contract DevOps Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/buf156kyqzw8jamfoyoakb17xh'>Contract DevOps Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692223230-devops-f-h-recommandation'>Adevinta Devops F-H Recommandation | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692223230-devops-f-h-recommandation'>Adevinta Devops F-H Recommandation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -142,7 +142,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/ovfzafwd'>Guidewire Software, Inc. Careers - DevOps Engineer- Microservices Platform- Birmingham, AL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/ovfzafwd'>Guidewire Software, Inc. Careers - DevOps Engineer- Microservices Platform- Birmingham, AL</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -150,7 +150,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durst.join.com/jobs/254803-devops-backend-entwickler-php-m-w-d'>Job @ Durststrecke (K?ln): DevOps / Backend Entwic... | JOIN</a></h5> 
+<h5><a href='https://durst.join.com/jobs/254803-devops-backend-entwickler-php-m-w-d'>Job @ Durststrecke (K?ln): DevOps / Backend Entwic... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -179,7 +179,7 @@ us your CV. Any questions before taking the next step? You can contact Dorian.</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
@@ -224,7 +224,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/newsignature/jobs/azure-devops-consultant-c1466kQaGr6AsBaKld2Sj6'>Azure DevOps Consultant #0826 job at New Signature in Tampa, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/newsignature/jobs/azure-devops-consultant-c1466kQaGr6AsBaKld2Sj6'>Azure DevOps Consultant #0826 job at New Signature in Tampa, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Tampa, FLTampa, FL</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -268,7 +268,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999692090863-devops-engineer'>Northgate Public Services DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999692090863-devops-engineer'>Northgate Public Services DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -307,7 +307,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
@@ -381,7 +381,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p>4 days ago ... Position Description: As a DevOps Engineer, you will play a key role developing 
 on the AWS platform, as well as crafting and implementing infrastructure as?...</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -411,7 +411,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upfeat.recruitee.com/o/systems-administrator-devops-engineer'>
+<h5><a href='https://upfeat.recruitee.com/o/systems-administrator-devops-engineer'>
       Systems Administrator / DevOps Engineer - Upfeat Media Inc.
     </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -457,7 +457,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solvinity.recruitee.com/l/nl/o/senior-devops-engineer-amersfoort'>
+<h5><a href='https://solvinity.recruitee.com/l/nl/o/senior-devops-engineer-amersfoort'>
       Senior Devops Engineer - Solvinity
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -471,7 +471,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
